--- a/GorillaTagLIV/Directory.Build.targets
+++ b/GorillaTagLIV/Directory.Build.targets
@@ -2,6 +2,9 @@
 <Project>
 	<Target Name="CopyToPlugins" AfterTargets="Build" Condition="'$(CI)'!='TRUE'">
 		<Copy SourceFiles="$(TargetPath)" DestinationFiles="$(PluginsPath)\$(ProjectName)\$(TargetFileName)" />
+		<Copy SourceFiles="$(TargetDir)Assets\liv-shaders" DestinationFiles="$(PluginsPath)\$(ProjectName)\Assets\liv-shaders" />
+		<Copy SourceFiles="$(TargetDir)Assets\liv-shaders.manifest" DestinationFiles="$(PluginsPath)\$(ProjectName)\Assets\liv-shaders.manifest" />
+		<Copy SourceFiles="$(TargetDir)LIV.dll" DestinationFiles="$(PluginsPath)\$(ProjectName)\LIV.dll" />
 		<Message Text="Copied to Plugins" Importance="high"/>
 	</Target>
 </Project>
