--- a/GorillaTagLIVPreload/GorillaTagLIVPreload.csproj
+++ b/GorillaTagLIVPreload/GorillaTagLIVPreload.csproj
@@ -12,7 +12,7 @@
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-      <OutputPath>C:\Program Files (x86)\Steam\steamapps\common\Gorilla Tag\BepInEx\patchers\GorillaTagLIV</OutputPath>
+      <OutputPath>$(PatchersPath)\GorillaTagLIV</OutputPath>
     </PropertyGroup>
 
     <ItemGroup>
