build everything to build folder

--- a/GorillaTagLIVPreload/GorillaTagLIVPreload.csproj
+++ b/GorillaTagLIVPreload/GorillaTagLIVPreload.csproj
@@ -9,6 +9,7 @@
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
       <DebugType>none</DebugType>
+      <OutputPath>..\Build\BepInEx\patchers\GorillaTagLIV</OutputPath>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
